--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/MyRecepisFragmentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MyRecipesFragment"
-    tools:visibility="visible">
+    tools:context=".ui.MyRecipesFragment" >
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardContainer"
@@ -73,8 +74,6 @@
                 app:layout_constraintStart_toEndOf="@+id/searchViewMyRecipes"
                 app:layout_constraintTop_toTopOf="parent" />
 
-           <!-- app:rippleColor="?attr/colorOnSecondary" cambia colore pressione -->
-
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/addChip"
@@ -101,7 +100,7 @@
         android:horizontalSpacing="10dp"
         android:numColumns="auto_fit"
         android:verticalSpacing="10dp"
-        android:layout_below="@id/cardContainer"/>
+       android:layout_below="@id/cardContainer"/>
 
 
 
