--- a/app/src/main/res/layout/home_card.xml
+++ b/app/src/main/res/layout/home_card.xml
@@ -13,12 +13,12 @@
     app:cardElevation="8dp">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewTest"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="11dp"
