--- a/app/src/main/res/layout/layout_ingredient_dialog.xml
+++ b/app/src/main/res/layout/layout_ingredient_dialog.xml
@@ -20,11 +20,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:text="NomeIngrediente" />
+                />
 
 
             <Button
-                android:id="@+id/addButton"
+                android:id="@+id/addIngredientButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -37,13 +37,13 @@
 
 
             <Button
-                android:id="@+id/deleteButton"
+                android:id="@+id/deleteIngredientButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="10dp"
-                android:layout_toLeftOf="@id/addButton"
+                android:layout_toLeftOf="@id/addIngredientButton"
                 android:text="delete" />
 
             <EditText
@@ -56,9 +56,10 @@
                 android:layout_marginTop="50dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/rounded_shape"
-                android:hint="  inserisci la quantità"
+                android:hint="inserisci la quantità"
                 android:inputType="number"
                 android:minHeight="48dp"
+                android:paddingLeft="4dp"
 
                 />
 
