--- a/app/src/main/res/layout/activity_single_recipe.xml
+++ b/app/src/main/res/layout/activity_single_recipe.xml
@@ -80,11 +80,13 @@
                     android:layout_marginEnd="5dp"
                     android:background="@android:drawable/screen_background_light_transparent"
                     android:minHeight="48dp"
+                    android:clickable="false"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/ButtonEditRecipe"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_action_delete"
                     tools:ignore="SpeakableTextPresentCheck"
+                    android:foreground="?android:selectableItemBackground"
                     android:visibility="gone"/>
 
                 <ImageButton
@@ -94,12 +96,14 @@
                     android:layout_marginEnd="5dp"
                     android:background="@android:drawable/screen_background_light_transparent"
                     android:minHeight="48dp"
+                    android:clickable="false"
                     app:layout_constraintBottom_toBottomOf="@+id/ButtonDeleteRecipe"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/ButtonDeleteRecipe"
                     app:layout_constraintVertical_bias="0.0"
                     app:srcCompat="@drawable/ic_action_edit"
                     tools:ignore="SpeakableTextPresentCheck"
+                    android:foreground="?android:selectableItemBackground"
                     android:visibility="gone"/>
 
 
