--- a/app/src/main/res/layout/activity_make_recipe.xml
+++ b/app/src/main/res/layout/activity_make_recipe.xml
@@ -7,34 +7,64 @@
     android:layout_height="match_parent"
     tools:context=".ui.MakeRecipe">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@drawable/xml_custom_shapes"
-        android:fontFamily="@font/poppins_bold"
-        android:gravity="center"
-        android:text="@string/make_your_recipe"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.502">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="@drawable/xml_custom_shapes"
+                android:fontFamily="@font/poppins_bold"
+                android:gravity="center"
+                android:text="@string/make_your_recipe"
+                android:textColor="@color/black"
+                android:textSize="22sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:id="@+id/recipeImage"
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
+                    android:layout_gravity="center"
+                    android:adjustViewBounds="true"
+                    android:background="@drawable/image_border"
+                    android:scaleType="centerCrop"
+                    />
+
+                <TextView
+                    android:id="@+id/chooseImageText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:drawablePadding="2dp"
+                    android:padding="2dp"
+                    android:text="@string/choose_image"
+                    android:textSize="18sp"
+                    android:visibility="visible"
+                    app:drawableRightCompat="@drawable/ic_baseline_camera_alt_24" />
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -43,18 +73,18 @@
 
                 <EditText
                     android:id="@+id/make_recipe_name"
-                    android:layout_marginTop="30dp"
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="@string/name_your_recipe"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp"
                     android:fontFamily="@font/poppins_regular"
-                    android:textSize="18sp"/>
+                    android:hint="@string/name_your_recipe"
+                    android:textSize="18sp" />
 
                 <LinearLayout
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_marginLeft="-18dp"
                     android:layout_marginTop="15dp"
                     android:orientation="horizontal">
@@ -80,7 +110,7 @@
 
             <Spinner
                 android:id="@+id/type_spinner"
-                android:layout_width="150dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:minHeight="48dp"
@@ -88,7 +118,7 @@
 
             <Button
                 android:id="@+id/ingredient_button"
-                android:layout_width="170dp"
+                android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:layout_marginTop="35dp"
                 android:backgroundTint="@color/cookery_blue"
@@ -108,7 +138,7 @@
 
             <Button
                 android:id="@+id/add_step_button"
-                android:layout_width="170dp"
+                android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:layout_marginTop="25dp"
                 android:backgroundTint="@color/cookery_blue"
@@ -126,20 +156,13 @@
 
             </androidx.recyclerview.widget.RecyclerView>
 
-            <Button
-                android:layout_width="170dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="25dp"
-                android:backgroundTint="@color/cookery_blue"
-                android:fontFamily="@font/poppins_semi_bold"
-                android:text="@string/add_image"
-                android:textAllCaps="false" />
 
             <Button
                 android:id="@+id/save_recipe"
-                android:layout_marginTop="25dp"
                 android:layout_width="170dp"
                 android:layout_height="40dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="10dp"
                 android:backgroundTint="@color/cookery_blue"
                 android:fontFamily="@font/poppins_semi_bold"
                 android:text="@string/save_recipe"
