--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,9 @@
 
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar" >
         <item name="colorPrimary">@color/cookery_blue</item>
-
+        <item name="colorPrimaryDark">@color/cookery_blue</item>
+        <item name="colorAccent">@color/cookery_blue</item>
+        <item name="android:colorEdgeEffect">@color/cookery_blue</item>
     </style>
 
 </resources>
