--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -65,12 +65,13 @@
         android:background="@color/cookery_blue">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="10dp"
             android:id="@+id/rcv_ingredient_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp">
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
+            android:elevation="50dp">
 
         </androidx.recyclerview.widget.RecyclerView>
     </RelativeLayout>
