--- a/app/src/main/res/layout/fragment_pantry.xml
+++ b/app/src/main/res/layout/fragment_pantry.xml
@@ -5,14 +5,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.PantryFragment"
-    android:tag="pantry_id_fragment"
-    android:id="@+id/idLayout">
+    android:tag="pantry_id_fragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        android:layout_marginBottom="60dp">
+        android:layout_marginBottom="60dp"
+        android:id="@+id/container_click">
 
         <LinearLayout
             android:layout_width="match_parent"
