--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,10 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@color/cookery_blue"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/back_button_login_2"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="15dp"
+            app:srcCompat="@drawable/ic_back_button"
+            android:foreground="?android:attr/selectableItemBackground"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_marginTop="100dp"
+        android:layout_width="300dp"
+        android:layout_height="105dp"
+        android:layout_gravity="center"
+        android:fontFamily="@font/poppins_semi_bold"
+        android:textAlignment="center"
+        android:text="@string/Update_email_pass"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:background="@drawable/rounded_shape_v2"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -67,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/profilePassword"
             android:layout_marginStart="250dp"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="30dp"
             android:backgroundTint="@color/cookery_blue"
@@ -81,4 +114,4 @@
     </RelativeLayout>
 
 
-</ScrollView>
+</LinearLayout>
