--- a/app/src/main/res/layout/login_register_activity.xml
+++ b/app/src/main/res/layout/login_register_activity.xml
@@ -12,6 +12,7 @@
         android:background="@color/cookery_blue"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -20,8 +21,8 @@
             android:layout_width="30dp"
             android:layout_height="match_parent"
             android:layout_marginStart="15dp"
-            app:srcCompat="@drawable/ic_back_button"
-            android:foreground="?android:attr/selectableItemBackground"/>
+            android:foreground="?android:attr/selectableItemBackground"
+            app:srcCompat="@drawable/ic_back_button" />
 
     </LinearLayout>
 
