--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -102,6 +102,7 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:minHeight="48dp"
+            android:hint="@string/password_hint"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <Button
